Fix: `ColonySubscription` loading spinner alignment

--- a/src/modules/dashboard/components/ColonyHome/ColonySubscription/ColonySubscription.css
+++ b/src/modules/dashboard/components/ColonyHome/ColonySubscription/ColonySubscription.css
@@ -25,7 +25,8 @@
 }
 
 .spinnerContainer {
-  margin: 0 0 -3px 2px;
+  margin: 5px 0 0px 2px;
+  position: absolute;
 }
 
 .menuIconContainer {
